--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Angry😡</title>
-    <link rel="stylesheet"href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="shortcut icon" href="./images/icons8-whatsapp-30.png" type="image/x-icon">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
 
@@ -16,7 +17,7 @@
     <span class="navbar-toggler-icon"></span>
   </button>
 
-  <!--The navigstion section starts here  -->
+  <!--The navigation section starts here  -->
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
@@ -38,6 +39,7 @@
       </li>
       <li class="nav-item">
           <a class="nav-link" href="#" >Discount</a>
+         
       </li>
       <li class="nav-item">
           <a class="nav-link" href="#">About</a>
@@ -48,18 +50,24 @@
       <li class="nav-item">
           <a class="nav-link" href="#">Contact</a>
       </li>
+      <li>
+          
+      </li>
     </ul>
-    <ul id="navbar-social-media">
-        <li class="list-socials"><i class="fa fa-google-plus-official" aria-hidden="true"></i></li>
-        <li class="list-socials"><i class="fa fa-twitter" aria-hidden="true"></i></li>
-        <li class="list-socials"><i class="fa fa-facebook-official" aria-hidden="true"></i></li>
-        <li class="list-socials"><i class="fa fa-instagram" aria-hidden="true"></i></li>
-    </ul>
+    <div class="navbar-social-media">
+        <ul id="">
+            <a class="a-socials" href=""><img class="img-socials" src="./images/icons8-facebook-30.png" alt=""></a>
+            <a class="a-socials" href=""><img class="img-socials" src="./images/icons8-instagram-30.png" alt=""></a>
+            <a class="a-socials" href=""><img class="img-socials" src="./images/icons8-twitter-30.png" alt=""></a>
+            <a class="a-socials" href=""><img class="img-socials" src="./images/icons8-whatsapp-30.png" alt=""></a>
+        </ul>
+    </div>
   </div>
 </nav>
 <!-- navigation ends here -->
 
 <!-- carousel starts right here -->
+
 <div class="bd-example">
     <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
@@ -67,24 +75,26 @@
             <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
             <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
         </ol>
+
         <div class="carousel-inner">
             <div class="carousel-item active">
+                <div class="overlay"></div>     
                 <img src="./images/hero_bg_1.jpg" class="d-block w-100" alt="man waiting for his flight">
-                <div class="carousel-caption d-none d-md-block">
+                <div class="carousel-caption d-none d-md-inline">
                     <h5>First slide label</h5>
                     <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
                 </div>
             </div>
             <div class="carousel-item">
                 <img src="./images/hero_bg_2.jpg" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
+                <div class="carousel-caption d-none d-md-inline">
                     <h5>Second slide label</h5>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 </div>
             </div>
             <div class="carousel-item">
                 <img src="./images/img_1.jpg" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
+                <div class="carousel-caption d-none d-md-inline">
                     <h5>Third slide label</h5>
                     <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
                 </div>
@@ -119,7 +129,7 @@
 
 
 
-
+    <script src="scrippt.js>"></script>
     <script src="./bootstrap/js/jquery_3.3.1.js"></script>
     <script src="./bootstrap/js/popper.min.js"></script>
     <script src="./bootstrap/js/bootstrap.js"></script>
